# sipas-be

./: .gitignore  add_kabid_signature_column.py  add_mock_inspection_logs.py  agregator.py  check_db.py  check_geojson_db.py  create_mock_cad.py  create_mock_shp.py  enable_postgis.py  make_columns_nullable.py  make_core_columns_nullable.py  migrate_users.py  optimize_postgres.py  pyproject.toml  rebuild_db.py  requirements.txt  scratch_check_geojson.py  scratch_print_sub4.py
alembic/: env.py  script.py.mako
alembic/versions/: 058ca2bd18c1_create_permohonan_files_table.py  08830d8c7079_merge_sla_and_kkpr.py  09cc0aaa2a7d_drop_redundant_photo_columns_from_.py  10f86caaeae7_add_verified_raw_areas.py  117953917193_add_pending_registrations_table.py  1a2b3c4d5e6f_seed_spatial_bylaws.py  1ddfa8438d38_expand_permohonan_schema_with_10_step_.py  2fd98bc703ce_add_drone_video_url.py  38abd7df8602_add_revisi_silsilah_columns.py  4a843b146644_add_sk_draft_table_and_sk_number_column.py  569881990be1_add_telaah_staf_table_and_verifier_.py  6e00ff0099cc_initial_commit_of_tables.py  7e664cf3454c_add_verified_raw_areas.py  8b9400381e3b_add_baseline_source_to_permohonan.py  8c94bf630111_separate_ground_and_aerial_inspection.py  92210e5f9699_add_tpu_bukti_dokumen_url_column.py  (+11 more)
docker/: Dockerfile  docker-compose.yml
docs/: DRAFT_SK_Pengesahan_Site_Plan_sub-1.html  Telaah_Staf_sub-1.html  Telaah_Staf_sub-1783574482457.html  Telaah_Staf_sub-1783575584344.html
scratch/: test_receipt.py  test_tpu_submission.py
templates/: receipt.html  sk_draft.html  telaah_staf.html
(+53 files in other folders)
