[project]
name = "sipas-be"
version = "0.1.0"
description = "Sistem Informasi Pelayanan Pengesahan Site Plan Digital Kabupaten Bogor"
authors = [
    {name = "Geocitra", email = "geocitra.office@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0)",
    "geoalchemy2 (>=0.14)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "ezdxf (>=1.4.4,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "geopandas (>=1.1.4,<2.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "pillow (>=12.2.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ─── SECTION: NON-PACKAGE MODE CONFIGURATION [1] ───
# Menegaskan ke Poetry bahwa proyek ini adalah Aplikasi Web (Bukan Pustaka PyPI) [1].
[tool.poetry]
package-mode = false